[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/lancer_horse.gd" type="Script" id=1]
[ext_resource path="res://data/images/horses/mobhorse/ehorse1.png" type="Texture" id=2]
[ext_resource path="res://data/images/horses/mobhorse/ehorse2.png" type="Texture" id=3]
[ext_resource path="res://data/images/horses/mobhorse/ehorse3.png" type="Texture" id=4]
[ext_resource path="res://data/images/horses/mobhorse/ehorse4.png" type="Texture" id=5]
[ext_resource path="res://data/images/horses/mobhorse/ehorse5.png" type="Texture" id=6]
[ext_resource path="res://data/images/horses/mobhorse/ehorse6.png" type="Texture" id=7]
[ext_resource path="res://scenes/lancer.tscn" type="PackedScene" id=8]
[ext_resource path="res://data/sound/effects/horse/horse_gallop_final.wav" type="Sample" id=9]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 19.2879
height = 100.402

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Resource" id=3]

samples/horse_gallop_final = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}

[node name="lancer_horse" type="KinematicBody2D" groups=[
"lancerhorses",
]]

pause_mode = 1
position = Vector2( 458.742, 284.128 )
z = 1
input_pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform2D( 1, 0, 0, 1, 0, 5 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
collision/margin = 0.08
script = ExtResource( 1 )

[node name="animation" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "default"
frame = 2
playing = true
flip_v = true

[node name="lancer" parent="." instance=ExtResource( 8 )]

position = Vector2( 0.966608, -43.7145 )
scale = Vector2( 1.3, 1.3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visible = false
position = Vector2( 0, 5 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="collision" type="Area2D" parent="."]

visible = false
position = Vector2( 0, 2.53716 )
scale = Vector2( 1, 2.19761 )
input_pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform2D( 1, 0, 0, 0.455039, 0, 1.12068 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="collide_rect" type="CollisionShape2D" parent="collision"]

position = Vector2( 0, 1.12068 )
scale = Vector2( 1, 0.455039 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="gallop" type="Node" parent="."]

polyphony = 4
samples = SubResource( 3 )
default/volume_db = -10.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="sample_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.6
one_shot = true
autostart = false

[node name="gallop_spread" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[connection signal="body_entered"  from="collision"  to="." method="_on_collision_body_enter" binds=[  ]]

[connection signal="body_exited"  from="collision"  to="." method="_on_collision_body_exit" binds=[  ]]
